Fix rss icon clipping

--- a/css/main.css
+++ b/css/main.css
@@ -113,7 +113,7 @@ a:visited { color: #a0a; }
 
 .footer .rss {
   margin-top: 1.1em;
-  margin-right: -.2em;
+  margin-right: .1em;
   float: right;
 }
 
